# django-crm

backend/: pyproject.toml
backend/accounts/: models.py  serializer.py  tasks.py  views.py
backend/cases/: serializer.py  solution_serializers.py  solution_views.py  views.py
backend/common/: access_decorators_mixins.py  admin.py  audit_log.py  base.py  custom_openapi.py  external_auth.py  mixins.py  models.py  permissions.py  serializer.py  swagger_params.py  tasks.py  tests_celery_tasks.py  token_generator.py  urls.py  utils.py
backend/common/app_urls/: __init__.py
backend/common/context_processors/: common.py
backend/common/management/commands/: audit_org_fields.py  manage_rls.py  migrate_from_prisma.py
backend/common/middleware/: get_company.py
backend/common/templatetags/: common_tags.py
backend/contacts/: admin.py  models.py  serializer.py  swagger_params.py  tasks.py  tests_celery_tasks.py  views.py
backend/crm/: celery.py  settings.py  urls.py
backend/invoices/: api_views.py  forms.py  models.py  serializer.py  tasks.py
backend/leads/: forms.py  serializer.py  swagger_params.py  tests_celery_tasks.py  views.py
backend/opportunity/: models.py  serializer.py  swagger_params.py  tasks.py  views.py
backend/tasks/: models.py  serializer.py  swagger_params.py  views.py
