[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow==1.4.0",
    "celery==5.5.3",
    "django==5.2.8",
    "django-cors-headers==4.9.0",
    "django-crum==0.7.9",
    "django-extensions==4.1",
    "django-phonenumber-field==8.4.0",
    "django-ses==4.4.0",
    "django-storages==1.14.6",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "phonenumbers==9.0.19",
    "psycopg2-binary==2.9.11",
    "pygount>=3.1.0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "redis==7.1.0",
    "requests==2.32.5",
    "sentry-sdk==2.46.0",
    "whitenoise==6.11.0",
]
